--- a/packages/sweetbook/pubspec.yaml
+++ b/packages/sweetbook/pubspec.yaml
@@ -7,8 +7,11 @@ environment:
   sdk: '>=2.18.0 <3.0.0'
 
 dependencies:
-  interact: ^2.1.1
-  args: ^2.3.1
+  go_router: ^4.5.0
+  agent_flutter:
+    path: ../../../agent/packages/agent_flutter
+  agent_core:
+    path: ../../../agent/packages/agent_core
   flutter:
     sdk: flutter
 
