--- a/packages/sweetbook_cli/pubspec.yaml
+++ b/packages/sweetbook_cli/pubspec.yaml
@@ -1,13 +1,10 @@
 name: sweetbook_cli
-description: A sample command-line application.
-version: 1.0.0
-# homepage: https://www.example.com
+description: CLI tool for sweetbook library
+version: 0.1.0
+homepage: https://github.com/iamguid/sweetbook
 
 environment:
   sdk: '>=2.18.0 <3.0.0'
-
-# dependencies:
-#   path: ^1.8.0
 
 dev_dependencies:
   lints: ^2.0.0
