--- a/packages/sweetbook/pubspec.yaml
+++ b/packages/sweetbook/pubspec.yaml
@@ -1,17 +1,18 @@
 name: sweetbook
-description: Sweetbook main library
 version: 0.2.7
+description: Sweetbook main library
 homepage: https://github.com/iamguid/sweetbook
+resolution: workspace
 
 environment:
-  sdk: '>=3.0.0 <4.0.0'
+  sdk: '>=3.6.0 <4.0.0'
 
 dependencies:
-  go_router: ^9.0.0
-  agent_flutter: ^0.3.2
+  go_router: ^14.8.0
+  agent_flutter: ^0.4.0
   flutter:
     sdk: flutter
 
 dev_dependencies:
-  lints: ^2.0.0
+  lints: ^5.1.1
   test: ^1.16.0
