--- a/packages/sweetbook_cli/pubspec.yaml
+++ b/packages/sweetbook_cli/pubspec.yaml
@@ -1,11 +1,12 @@
 name: sweetbook_cli
-description: CLI tool for sweetbook library
 version: 0.1.0
+description: CLI tool for sweetbook library
 homepage: https://github.com/iamguid/sweetbook
+resolution: workspace
 
 environment:
-  sdk: '>=2.18.0 <3.0.0'
+  sdk: '>=3.6.0 <4.0.0'
 
 dev_dependencies:
-  lints: ^2.0.0
+  lints: ^5.1.1
   test: ^1.16.0
