--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,19 @@
 name: sweetbook_workspace
-homepage: https://github.com/iamguid/sweetbook
+publish_to: none
 
 environment:
-  sdk: '>=3.0.0 <4.0.0'
+  sdk: '>=3.6.0 <4.0.0'
+
 dev_dependencies:
-  melos: ^3.1.0
+  melos: ^7.0.0-dev.7
+
+workspace:
+  - packages/sweetbook
+  - packages/sweetbook_cli
+  - examples/sweetbook_basic
+
+melos:
+  scripts:
+    upgrade:
+      run: melos exec -- "flutter pub upgrade --major-versions"
+      description: Upgrade all packages to the latest version.
